tests/test0148.exp
Parse error, unexpected { ( tests/test0148.ctr: 3 )
Expeted a dot (.).
