tests/test0148.ctr
#NOAST
#Test whether we can generate a correct parser error.
Nil {.
